# SpeltEngine

./: .gitmodules  CMakeLists.txt
.zed/: tasks.json
docs/PostProcessing/: getting-started.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: App.h  Camera.h  FileReader.h  FrameBuffer.h  InputManager.h  Mesh.h  ModelLoader.h  PickBuffer.h  Texture.h  VertexArray.h  Window.h
include/Buffer/: Buffer.h  BufferMap.h
include/Defaults/: Design rules.md
include/Defaults/Camera/: FirstPersonCamera.h
include/Defaults/Objects/: TransformableObject.h
include/Defaults/Objects/Drawables/: MeshObject.h
include/Defaults/Objects/Drawables/Clickables/: ClickableMesh.h  ClickableObject.h
include/Defaults/PostProcessing/: Bloom.h  Blur.h
include/Lighting/: AmbientLight.h  PointLight.h
include/Material/: Material.h
include/PostProcessing/: PostProcessingComputeUnit.h  PostProcessingEffect.h  PostProcessingGroup.h  PostProcessingPipeline.h
include/Renderer/: BasicPerDrawableRenderPass.h  BasicRenderPass.h  IDrawable.h  IPerDrawableRenderPass.h  IRenderPass.h  IRenderable.h  RenderCommand.h  RenderQueue.h  RenderState.h  RenderStateManager.h  Renderer.h
include/Scene/: Object.h  ObjectID.h  Scene.h  SceneHierarchyComponent.h
include/Shaders/: ComputeShader.h  ShaderProgram.h  ShaderUniform.h
include/Strings/: ShaderSource.h
include/Transform/: ITransformable.h  Transform.h
include/Utilities/: Random.h
src/: App.cpp  Camera.cpp  FileReader.cpp  InputManager.cpp  Mesh.cpp  ModelLoader.cpp  PickBuffer.cpp  Texture.cpp  VertexArray.cpp  Window.cpp
src/Buffer/: Buffer.cpp
src/Defaults/Camera/: FirstPersonCamera.cpp
src/Defaults/Objects/: TransformableObject.cpp
src/Defaults/Objects/Drawables/: MeshObject.cpp
src/Defaults/Objects/Drawables/Clickables/: ClickableMesh.cpp  ClickableObject.cpp
src/Defaults/PostProcessing/: Bloom.cpp  Blur.cpp
src/Lighting/: AmbientLight.cpp  PointLight.cpp
src/Material/: Material.cpp
src/PostProcessing/: PostProcessingComputeUnit.cpp  PostProcessingEffect.cpp  PostProcessingGroup.cpp  PostProcessingPipeline.cpp
src/Renderer/: BasicPerDrawableRenderPass.cpp  BasicRenderPass.cpp  RenderCommand.cpp  RenderQueue.cpp  RenderState.cpp  RenderStateManager.cpp  Renderer.cpp
src/Scene/: Object.cpp  Scene.cpp  SceneHierarchyComponent.cpp
src/Shaders/: ComputeShader.cpp  ShaderProgram.cpp  ShaderUniform.cpp
src/Transform/: Transform.cpp
test/: CMakeLists.txt  MainTest.cpp  SceneTest.cpp
test_scene/: CMakeLists.txt
test_scene/src/: ToonScene.cpp
